tests/data/motifs/bad/test_pwms_bad1.motifscan

>MA0006.1	Ahr::Arnt	PWM
A [-0.85815	-5.68647	-5.68647	-5.68647	-5.68647	-5.68647]
C [ 0.48657	-5.32257	 1.53966	-5.32257	-5.32257	-5.32257]
G [-0.90016	 1.53922	-5.32301	 1.53922	-5.32301	 1.58174]
T [ 0.43981	-1.93828	-1.93828	-1.93828	 1.21696	-5.68779]
>MA0854.1	Alx1	PWM
